# mephi-3rd-semestr-2nd-laboratory-sortings

./: CMakeLists.txt  README.md  comparings.cpp  comparings.h  dynamic_array.h  file_generator.cpp  file_generator.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  functional_tests.cpp  functional_tests.h  graph_builder.cpp  graph_builder.h  isorted.h  isorter.h  main.cpp  menu.cpp  menu.h  menu_functions.cpp  menu_functions.h  names.h  people.h  sequence.h  sorting_methods.h  sortings.h  test  unique_pointer.h
graph_examples/: graphs
